rope know worldgen fix